Add route and instructions output to website

--- a/map.html
+++ b/map.html
@@ -67,6 +67,7 @@
             </optgroup>
     </select>
     <button id="submit">Submit</button>
-    <h2 id="route"></h2>
+    <h4 id="route"></h4>
+    <h4 id="routelist"></h4>
 </body>
 </html>
