--- a/map.html
+++ b/map.html
@@ -10,64 +10,88 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/		bootstrap.min.css" rel="stylesheet" integrity="sha384-		GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" 		crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>
-        <a href="index.html">Home</a>
-        <a href="map.html">Map</a>
-        <a href="schedule.html">Schedule</a>
-        <a href="tickets.html">Tickets</a>
-        <a href="announcements.html">Announcements</a>
-    </header>
-    <img src="metro map.png" alt="">
-    <label for="start">Start point: </label>
-    <select name="start" id="start" required>
-        <option value="" selected>Select a starting station:</option>
-        <optgroup label="Grey">
-            <option value="Schneier Road">Schneier Road</option>
-            <option value="Central">Central</option>
-            <option value="Grand Station">Grand Station</option>
-            <option value="Gates Marsh">Gates Marsh</option>
-        </optgroup>
-        <optgroup label="Red">
-            <option value="Torvalds Park">Torvalds Park</option>
-            <option value="Central">Central</option>
-            <option value="Kernighan Way">Kernighan Way</option>
-            <option value="Stallman Bridge">Stallman Bridge</option>
-        </optgroup>
-        <optgroup label="Blue">
-            <option value="Wozniak Bridge">Wozniak Bridge</option>
-            <option value="Grand Station">Grand Station</option>
-            <option value="Lecun Street">Lecun Street</option>
-            <option value="Chollet Lane">Chollet Lane</option>
-            <option value="Poettering Wood">Poettering Wood</option>
+    <nav class="navbar bg-body-tertiary fixed-top">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Metro of Town Codeville</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+            <div class="offcanvas-header">
+              <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="map.html">Map</a>
+                </li>
+                <li class="nav-item">
+                  <a class="dropdown-item" href="schedule.html">Schedule and ticket prices</a>
+                </li>
+              </ul>
+           </div>
+          </div>
+        </div>
+    </nav>
+    <main>
+        <img src="metro map.png" alt="">
+        <label for="start">Start point: </label>
+        <select name="start" id="start" required>
+            <option value="" selected>Select a starting station:</option>
+            <optgroup label="Grey">
+                <option value="Schneier Road">Schneier Road</option>
+                <option value="Central">Central</option>
+                <option value="Grand Station">Grand Station</option>
+                <option value="Gates Marsh">Gates Marsh</option>
             </optgroup>
-    </select>
-    <label for="end">End point: </label>
-    <select name="end" id="end" required>
-        <option value="" selected>Select an ending station:</option>
-        <optgroup label="Grey">
-            <option value="Schneier Road">Schneier Road</option>
-            <option value="Central">Central</option>
-            <option value="Grand Station">Grand Station</option>
-            <option value="Gates Marsh">Gates Marsh</option>
-        </optgroup>
-        <optgroup label="Red">
-            <option value="Torvalds Park">Torvalds Park</option>
-            <option value="Central">Central</option>
-            <option value="Kernighan Way">Kernighan Way</option>
-            <option value="Stallman Bridge">Stallman Bridge</option>
-        </optgroup>
-        <optgroup label="Blue">
-            <option value="Wozniak Bridge">Wozniak Bridge</option>
-            <option value="Grand Station">Grand Station</option>
-            <option value="Lecun Street">Lecun Street</option>
-            <option value="Chollet Lane">Chollet Lane</option>
-            <option value="Poettering Wood">Poettering Wood</option>
+            <optgroup label="Red">
+                <option value="Torvalds Park">Torvalds Park</option>
+                <option value="Central">Central</option>
+                <option value="Kernighan Way">Kernighan Way</option>
+                <option value="Stallman Bridge">Stallman Bridge</option>
             </optgroup>
-    </select>
-    <button id="submit">Submit</button>
-    <h4 id="route"></h4>
-    <h4 id="routelist"></h4>
+            <optgroup label="Blue">
+                <option value="Wozniak Bridge">Wozniak Bridge</option>
+                <option value="Grand Station">Grand Station</option>
+                <option value="Lecun Street">Lecun Street</option>
+                <option value="Chollet Lane">Chollet Lane</option>
+                <option value="Poettering Wood">Poettering Wood</option>
+                </optgroup>
+        </select>
+        <label for="end">End point: </label>
+        <select name="end" id="end" required>
+            <option value="" selected>Select an ending station:</option>
+            <optgroup label="Grey">
+                <option value="Schneier Road">Schneier Road</option>
+                <option value="Central">Central</option>
+                <option value="Grand Station">Grand Station</option>
+                <option value="Gates Marsh">Gates Marsh</option>
+            </optgroup>
+            <optgroup label="Red">
+                <option value="Torvalds Park">Torvalds Park</option>
+                <option value="Central">Central</option>
+                <option value="Kernighan Way">Kernighan Way</option>
+                <option value="Stallman Bridge">Stallman Bridge</option>
+            </optgroup>
+            <optgroup label="Blue">
+                <option value="Wozniak Bridge">Wozniak Bridge</option>
+                <option value="Grand Station">Grand Station</option>
+                <option value="Lecun Street">Lecun Street</option>
+                <option value="Chollet Lane">Chollet Lane</option>
+                <option value="Poettering Wood">Poettering Wood</option>
+                </optgroup>
+        </select>
+        <button id="submit">Submit</button>
+        <h4 id="route"></h4>
+        <h4 id="routelist"></h4>
+    </main>
 </body>
 </html>
