--- a/map.html
+++ b/map.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Metro map</title>
-    <script src="script.js" defer></script>
+    <script src="map.js" defer></script>
     <link rel="stylesheet" href="map.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -92,6 +92,8 @@
         <button id="submit">Submit</button>
         <h4 id="route"></h4>
         <h4 id="routelist"></h4>
+        <h4 id="time"></h4>
+        <h4 id="tickets"></h4>
     </main>
 </body>
 </html>
