Add nearby attractions to map.html

--- a/map.html
+++ b/map.html
@@ -94,6 +94,7 @@
         <h4 id="routelist"></h4>
         <h4 id="time"></h4>
         <h4 id="tickets"></h4>
+        <h4 id="attractionoutput"></h4>
     </main>
 </body>
 </html>
