--- a/map.html
+++ b/map.html
@@ -36,6 +36,12 @@
                 <li class="nav-item">
                   <a class="dropdown-item" href="schedule.html">Schedule and ticket prices</a>
                 </li>
+                <li class="nav-item">
+                  <a class="dropdown-item" href="announcements.html">Announcements</a>
+                </li>
+                <li class="nav-item">
+                  <a class="dropdown-item" href="addann.html">[ADMIN] Change announcements</a>
+                </li>
               </ul>
            </div>
           </div>
